Actions
Bug #19763
closedInconsistent error message for String#index vs String#rindex
Bug #19763:
Inconsistent error message for String#index vs String#rindex
Description
String#index and String#rindex yields different error messages when used with a Regexp argument:
Prints: incompatible character encodings: ISO-2022-JP and UTF-8 (Encoding::CompatibilityError)
Prints: incompatible encoding regexp match (UTF-8 regexp with ISO-2022-JP string) (Encoding::CompatibilityError)
Looking at a few other use cases (eg String#byteindex, String#byterindex) Ruby seems to use the message incompatible encoding regexp match when encoding is checked between a String and a Regexp instance. Is this a bug for String#index?
Updated by nobu (Nobuyoshi Nakada) about 3 years ago
- Status changed from Open to Closed
Applied in changeset git|e2257831ab20915b839eeaff79c6ec45b498de77.
[Bug #19763] Raise same message exception for regexp
Actions