[Bug #19763] Raise same message exception for regexp